--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,14 +1,19 @@
 <html>
   <head>
-    {% if title %}
-    <title>{{ title }} - microblog</title>
-    {% else %}
-    <title>Welcome to microblog</title>
-    {% endif %}
+    <title>Conscript</title>
   </head>
   <body>
-    <div>Conscript: <a href="/index">Home</a></div>
-    <hr>
+    {% with messages = get_flashed_messages() %}
+      <div>Conscript: <a href="/index">Home</a></div>
+      <hr>
+      {% if messages %}
+        <ul>
+        {% for message in messages %}
+          <li>{{ message }}</li>
+        {% endfor %}
+        </ul>
+      {% endif %}
+    {% endwith %}
     {% block content %}{% endblock %}
   </body>
 </html>
